--- a/about-me/css/styles.css
+++ b/about-me/css/styles.css
@@ -28,6 +28,17 @@ p {
     padding: 5px;
     background-color: beige;
   }
+  container{
+    background-color: pink;
+  }
+  a{
+    font-size: 15px;
+    color: black;
+    margin: 5px;
+    border-radius: 5px;
+    padding: 10px;
+
+  }
   h2{
     color: pink;
     margin: 5px;
